# C-Lua-Dynamic-Text-Menu

./: CMakeLists.txt  ReadMe.md  main.c  mainDS.c  mainMenuTree.c  pair.h  stack.c  stack.h  utils.c  utils.h
MinimumStack/: minstack.c  minstack.h
luaUtils/: luautils.c  luautils.h  luawrapper.c  luawrapper.h
luas/: program1.lua
menuTree/: menuTree.c  menuTree.h
minimumStack/: minstack.c  minstack.h
pair/: pair.c
stack/: stack.c  stack.h
